# SUPERCOLD

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/ace_pistol/: license.txt  scene.gltf
assets/models/cyber_revolver/: scene.gltf
assets/models/cylinder-bot/: license.txt  scene.gltf
assets/models/gregory/: license.txt
assets/models/halo_creatures/: license.txt  scene.gltf
assets/models/helmet/: DamagedHelmet.gltf
assets/models/laser_gun/: license.txt  scene.gltf
assets/models/level2/: scene.gltf
assets/models/level2/ceil/: scene.gltf
assets/models/level2/floor/: scene.gltf
assets/models/level2/tv1/: scene.gltf
assets/models/master_chief/: license.txt  scene.gltf
assets/models/revolver/: license.txt
assets/models/school/: license.txt  scene.gltf
assets/models/sphere/: sphere.gltf
assets/shaders/: checkerboard.frag  color-mixer.frag  debug.vert  debug_line.frag  debug_line.vert  text.frag  tinted.vert  trail.frag  trail.vert  triangle.vert
assets/shaders/light/: directional_light.frag  light_array.frag  light_array.vert  light_transform.vert  pbr-weights.frag  pbr.frag  pbr.vert  point_light.frag  spot_light.frag
assets/shaders/light/ibl/: background.frag
assets/shaders/postprocess/: chromatic-aberration.frag  post.frag  post.vert  vignette.frag
config/: app.jsonc
config/animation-test/: test-load-skeletons-1.jsonc  test-load-skeletons-2.jsonc
config/integration-test/: test-0.jsonc  test-1.jsonc  test-2.jsonc  test-3.jsonc  test-4.jsonc
config/levels/: level1.jsonc  level2.jsonc  level3.jsonc  level4.jsonc
config/light-test/: test-array.jsonc  test-bloom-4.jsonc  test-bloom-5.jsonc  test-directional.jsonc  test-pbr-0.jsonc  test-pbr-1.jsonc  test-pbr-2.jsonc  test-pbr-3.jsonc  test-pbr-4.jsonc  test-point.jsonc  test-spot.jsonc
config/model-test/: test-0.jsonc  test-1.jsonc  test-2.jsonc  test-3.jsonc  test-4.jsonc  test-5.jsonc
config/physics-test/: forces-0.jsonc  mesh-0.jsonc  mesh-1.jsonc  test-0.jsonc  test-1.jsonc
config/postprocess-test/: test-0.jsonc  test-1.jsonc  test-2.jsonc  test-3.jsonc
docs/: Installation.md  Light.md  Report.md
scripts/: build_linux.sh  build_windows.bat  compare-all.ps1  compare-group.sh  compare_all.sh  reinstall_imgui.sh  run-all.ps1  run_all.sh
source/: main.cpp
source/common/: application.cpp  application.hpp  asset-loader.cpp  asset-loader.hpp  settings.hpp
source/common/animation/: animation-player.cpp  animation-player.hpp  animation.hpp  bone.hpp  skeleton.cpp  skeleton.hpp
source/common/audio/: audio-buffer.hpp  audio-utils.cpp  audio-utils.hpp
source/common/components/: animation-component.cpp  animation-component.hpp  audio.cpp  audio.hpp  camera.cpp  collision.cpp  collision.hpp  component-deserializer.hpp  crosshair.cpp  crosshair.hpp  enemy-controller.cpp  enemy-controller.hpp  fps-controller.cpp  fps-controller.hpp  free-camera-controller.hpp  mesh-renderer.cpp  mesh-renderer.hpp  model-renderer.cpp  model-renderer.hpp  model.cpp  model.hpp  trail-renderer.cpp  trail-renderer.hpp  weapon.cpp  weapon.hpp
source/common/ecs/: component.hpp  entity.cpp  entity.hpp  lighting.cpp  lighting.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
source/common/ibl/: bloom-buffer.cpp  bloom-buffer.hpp  cube-map-buffer.cpp  cube-map-buffer.hpp  cubemap-buffer.cpp  cubemap-buffer.hpp  cubemap.cpp  cubemap.hpp  fullscreenquad.cpp  fullscreenquad.hpp  hdr-system.cpp  hdr-system.hpp  postprocess.cpp  postprocess.hpp
source/common/material/: material.cpp  material.hpp  pipeline-state.hpp
source/common/mesh/: mesh-utils.cpp  mesh-utils.hpp  mesh.hpp  vertex.hpp
source/common/model/: animation-data.hpp  model.cpp  model.hpp
source/common/shader/: shader.cpp  shader.hpp
source/common/systems/: animation-system.cpp  animation-system.hpp  audio-system.cpp  audio-system.hpp  collision-system.cpp  collision-system.hpp  enemy-system.cpp  enemy-system.hpp  forward-renderer.cpp  forward-renderer.hpp  fps-controller.hpp  free-camera-controller.hpp  movement.hpp  text-renderer.hpp  trail-system.cpp  trail-system.hpp  weapons-system.cpp  weapons-system.hpp
source/common/texture/: cubemap-texture.cpp  cubemap-texture.hpp  sampler.cpp  sampler.hpp  texture-unit.hpp  texture-utils.cpp  texture-utils.hpp
source/game/core/: level.hpp  menu.hpp  time-scale.hpp
source/game/utils/: time-scale.hpp
source/states/: entity-test-state.hpp  light-test-state.hpp  load-skeleton-state.hpp  menu-state.hpp  physics-test-state.hpp  play-state.hpp
